# universal-image-generator-mcp

./: README.md  pyproject.toml
ref_doc/: imagen4.md
src/universal-image-generator-mcp/: __init__.py  bailian_provider.py  gemini_provider.py  providers.py  server.py  zhipuai_provider.py
src/universal_image_generator_mcp/: google_provider.py  prompts.py  providers.py  server.py
